--- a/plants.html
+++ b/plants.html
@@ -10,15 +10,25 @@
  <header>
     <h1>🌿 Explorador de Plantas</h1>
     <div class="upload-container">
-      <button class="upload-btn">
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-          <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
-          <polyline points="17 8 12 3 7 8"></polyline>
-          <line x1="12" y1="3" x2="12" y2="15"></line>
-        </svg>
-        Subir imagen de planta
-      </button>
-      <input type="file" id="upload" accept="image/*">
+      <div class="upload-options">
+        <button class="upload-btn" id="uploadGalleryBtn">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+            <polyline points="17 8 12 3 7 8"></polyline>
+            <line x1="12" y1="3" x2="12" y2="15"></line>
+          </svg>
+          Subir imagen
+        </button>
+        <button class="upload-btn" id="takePhotoBtn">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M14.5 4h-5L7 7H4a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-3l-2.5-3z"></path>
+            <circle cx="12" cy="13" r="3"></circle>
+          </svg>
+          Tomar foto
+        </button>
+      </div>
+      <input type="file" id="upload" accept="image/*" style="display: none;">
+      <input type="file" id="cameraInput" accept="image/*" capture="environment" style="display: none;">
     </div>
   </header>
    <main>
@@ -33,7 +43,6 @@
     </div>
   </div>
 
-    <script type="module" src="app.js"></script>
-
+  <script type="module" src="app.js"></script>
 </body>
 </html>
